In public/css/stylebackoffice.css, line 27: added the thead selector for the property text-align with the center value. In templates/admin/index.html.twig, line 55: added the route 'admin_use' for the href attribute. In templates/admin/user.html.twig, deleted <table> tag with the five <th> tag , fix the excess <td> tag, lines 78-81: added else condition (if no user is register).

--- a/books_exchange/public/css/stylebackoffice.css
+++ b/books_exchange/public/css/stylebackoffice.css
@@ -24,7 +24,8 @@ body {
     box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
 }
 
-td {
+td,
+thead {
     text-align: center;
 }
 
